@@ -508,7 +508,8 @@
 
       \item \code{dnorm} had a problematic corner case with \code{sd == -Inf} and
       negative \code{sd} was not flagged as error in all cases. Thanks to Stephen
-      D. Weigand for reporting and Wang Jiefei for analyzing this.
+      D. Weigand for reporting and Wang Jiefei for analyzing this; similar
+      change in \code{dlnorm()}.
     }
   }
 }
